fixed spacing issues

--- a/src/static/Home.css
+++ b/src/static/Home.css
@@ -134,6 +134,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 150px;
     width: 100vw;
     height: auto;
 }
