--- a/src/static/Toggle.css
+++ b/src/static/Toggle.css
@@ -1,7 +1,7 @@
 .switch {
     display: inline-block;
-    margin-top: 3%;
-    margin-right: 4%;
+    margin-top: 5%;
+    margin-right: 6%;
     position: relative;
 }
 
